# ROVI

./: .gitignore
SamplePluginPA10/: CMakeCache.txt  Makefile  cmake_install.cmake  qrc_resources.cpp  ui_SamplePlugin.h
SamplePluginPA10/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  moc_SamplePlugin.cpp  moc_SamplePlugin.cpp_parameters
Vision_part/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  final_project  final_project.cpp
build-SamplePluginPA10-Imported_Kit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  ui_SamplePlugin.h
build-SamplePluginPA10-Imported_Kit-Debug/src/: moc_SamplePlugin.cpp  moc_SamplePlugin.cpp_parameters
build-SamplePluginPA10-Imported_Kit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  qrc_resources.cpp  ui_SamplePlugin.h
build-SamplePluginPA10-Imported_Kit-Default/src/: moc_SamplePlugin.cpp_parameters
